# INFM_Projekt

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  Subscale.sln  config.json
Client/: CMakeLists.txt  config.json
Client/src/: Config.cpp  Config.h  Main.cpp
Client/src/helper/: VectorHash.cpp  VectorHash.h
Client/src/remote/: Client.cpp  Client.h
Core/: CMakeLists.txt  Core.cpp  Core.h  ExporterInterface.h  ImporterInterface.h  Subscale.cpp  Subscale.h
Core/Data/: Cluster.h  CoreSet.h  DataSet.cpp  DataSet.h  DenseUnit.h  Dimension.cpp  Dimension.h  Subspace.cpp  Subspace.h
Core/Exporter/: CsvExporter.cpp  CsvExporter.h
Core/Helper/: ClusterHelper.cpp  ClusterHelper.h  Config.cpp  Config.h
Core/Importer/: CsvImporter.cpp  CsvImporter.h
Core/Subscale/: Cluster.cpp  Cluster.h  CoreSetGeneratorInterface.h  CoreSetSeekerInterface.h  DataLabelerInterface.h  DenseUnitCombinerInterface.h  DenseUnitGeneratorInterface.h  ExporterInterface.h  ImporterInterface.h  SubscaleFactoryInterface.h  SubspaceCombinerInterface.h  SubspaceDetectorInterface.h
Core/Subscale/CoreSetGenerator/: SequentialCoreSetGenerator.cpp  SequentialCoreSetGenerator.h
Core/Subscale/CoreSetSeeker/: CoreSet.cpp  CoreSet.h  SequentialCoreSetSeeker.cpp  SequentialCoreSetSeeker.h
Core/Subscale/DataLabeler/: LabeledData.cpp  LabeledData.h  SequentialDataLabeler.cpp  SequentialDataLabeler.h
Core/Subscale/DenseUnitCombiner/: SequentialDenseUnitCombiner.cpp  SequentialDenseUnitCombiner.h
Core/Subscale/DenseUnitGenerator/: DenseUnit.cpp  DenseUnit.h  SequentialDenseUnitGenerator.cpp  SequentialDenseUnitGenerator.h
Core/Subscale/Exporter/: CsvClusterExporter.cpp  CsvClusterExporter.h  CsvDenseUnitExporter.cpp  CsvDenseUnitExporter.h  CsvExporter.cpp  CsvExporter.h
Core/Subscale/Factory/: SequentialSubscaleFactory.cpp  SequentialSubscaleFactory.h
Core/Subscale/Importer/: CsvImporter.cpp  CsvImporter.h  Dimension.cpp  Dimension.h  Point.cpp  Point.h
Core/Subscale/SubspaceCombiner/: SequentialSubspaceCombiner.cpp  SequentialSubspaceCombiner.h
Core/Subscale/SubspaceDetector/: SequentialSubspaceDetector.cpp  SequentialSubspaceDetector.h  Subspace.cpp  Subspace.h
Delivery_1/: DeliverableTemplate.tex  Literatur.bib  Thesis.bat
Delivery_1/Chapter/: Chapter_1.tex  Chapter_2.tex  Chapter_3.tex  Chapter_4.tex  Chapter_5.tex  Chapter_6.tex  abstract.tex
Delivery_2/: DeliverableTemplate.tex
Delivery_2/Chapter/architecture/: masterworker.tex  peertopeer.tex  pipeline.tex  tcpposix.tex
Delivery_2/Chapter/distribution/: coresets.tex  densedimensions.tex  denseunits.tex  groupdimensions.tex
Delivery_3/Chapter/: abstract.tex
Delivery_4/: Literatur.bib
Delivery_5/: DeliverableTemplate.tex
Proto/: CMakeLists.txt  subscale.proto
Protokolle/: Protokoll.docx
Server/: CMakeLists.txt  local-server.sh
Server/src/: Main.cpp  SubscaleRoutesImpl.cpp  SubscaleRoutesImpl.h
Subscale/: CMakeLists.txt
Subscale/src/: Main.cpp
SubscaleGPU/: CMakeLists.txt  main.cpp
SubscaleGPU/Clustering/: Clustering.cpp  Clustering.h
SubscaleGPU/Config/: config.json
SubscaleGPU/CsvDataHandler/: CsvDataHandler.cpp  CsvDataHandler.h
SubscaleGPU/GRPCFile/: subscale.grpc.pb.cc  subscale.grpc.pb.h  subscale.pb.cc  subscale.pb.h
SubscaleGPU/LabelGenerator/: LabelGenerator.cpp  LabelGenerator.h
SubscaleGPU/Remote/: Remote.cpp  Remote.h
SubscaleGPU/Subscale/: ISubscale.cpp  ISubscale.h  Subscale.cpp  Subscale.h  SubscaleSeq.cpp  SubscaleSeq.h
SubscaleGPU/SubscaleConfig/: SubscaleConfig.cpp
SubscaleGPU/SubspaceJoiner/: SubspaceJoinerSeq.cpp  SubspaceJoinerSeq.h
SubscaleGPU/SubspaceMap/: SubspaceMapSeq.cpp  SubspaceMapSeq.h
SubscaleGPU/TimeMeasurement/: TimeMeasurement.cpp
SubscaleGPU/entry/: SubscaleEntry.cpp  SubscaleEntry.h
SubscaleGPU/results/: candidates.csv  clusters.csv
Wichtige_Dokumente/: Kolloquium.pptx
docs/: .gitignore  Presentation.pptx
docs/Delivery_1/Chapter/: Chapter_1.tex  Chapter_3.tex  Chapter_7.tex  abstract.tex
docs/Delivery_2/: DeliverableTemplate.tex
docs/Delivery_2/Chapter/distribution/: coresets.tex  densedimensions.tex
docs/Delivery_4/: DeliverableTemplate.tex
docs/Delivery_5/Chapter/: Chapter_6.tex
docs/Delivery_6/: DeliverableTemplate.tex
docs/Delivery_6/Chapter/: Chapter_1.tex  Chapter_2.tex  Chapter_3.tex  Chapter_4.tex  Chapter_5.tex  Chapter_6.tex  Chapter_7.tex  abstract.tex
docs/Delivery_6/src/: CsvExporter.h  DoExportPart1.cpp  DoExportPart2.cpp  calculateClusterCandidatesRemote.cpp  calculateRemote.cpp  calculateSlice.cpp  calculateSliceCuda.cpp  calculateSliceSeq.cpp  test.cpp
docs/Delivery_6/src/Client/: Config.cpp
docs/Delivery_6/src/Server/: Main.cpp  SubscaleRoutesImpl.cpp
docs/Protokolle/: Protokoll.docx
docs/Protokolle/DOCX/: Protokoll_24062022.docx
docs/Wichtige_Dokumente/: Kolloquium_03.pptx
